--- a/setup.cfg
+++ b/setup.cfg
@@ -1,19 +1,16 @@
 [metadata]
 name = spirit-extras
 version = 0.0.1
-author = Example Author
-author_email = author@example.com
-description = A small example package
+author = Moritz Sallermann
+author_email = m.sallermann@fz-juelich.de
+description = Package to be used with the magnetism simulation tool spirit
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/pypa/sampleproject
-project_urls =
-    Bug Tracker = https://github.com/pypa/sampleproject/issues
+url = https://github.com/msallermann/spirit_extras
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
-
 [options]
 package_dir =
     = src
