small changes to setup

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,9 @@ package_dir =
     = src
 packages = find:
 python_requires = >=3.6
-
+install_requires =
+    numpy
+    pyvista
+    anytree
 [options.packages.find]
 where = src
