--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,4 +23,4 @@ jobs:
           pip install .
       - name: Run tests
         run: |
-          python -m unittest
+          python -m unittest --verbose
