--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,8 @@ jobs:
           ls
           pip install spirit
           pip install .
+          sudo apt-get install libgl1-mesa-dev
+          sudo apt-get install xvfb
       - name: Run tests
         run: |
           python -m unittest --verbose
