--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = spirit-extras
-version = 0.0.30
+version = 0.0.31
 author = Moritz Sallermann
 author_email = m.sallermann@fz-juelich.de
 description = Package to be used with the magnetism simulation tool spirit
@@ -23,6 +23,6 @@ install_requires =
     termcolor
     PyYAML
     toml
-    PIL
+    pillow
 [options.packages.find]
 where = src
